# flags

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  flags.hpp  flags_slides.md  index.html
.github/workflows/: ci.yml  multi_tests.yml
cmake/: dependencies.cmake
doc/: Jamfile  changes.adoc  description.adoc  design_rationale.adoc  flags.html  index.adoc  make_docs.bat  other_implementations.adoc  reference.adoc
doc/html/: flags.html
doc/latex/: converter.html
example/: order_pizza.cpp
include/boost/: flags.hpp
meta/: libraries.json
presentations/C++Now-2024/: flags_slides.html  flags_slides.md
presentations/C++Now-2024/demo-code/: control_styles.cpp  control_styles.sln  control_styles.vcxproj  test_1.cpp  test_10.cpp  test_10.vcxproj  test_2.vcxproj  test_3.cpp  test_4.cpp  test_4.vcxproj  test_5.vcxproj  test_6.cpp  test_7.vcxproj  test_8.cpp  test_8.vcxproj  test_9.cpp  test_9.vcxproj
talk/code/: example_1.cpp  snippets.hpp
talk/control_styles/: control_styles.vcxproj.filters  test_1.vcxproj  test_2.cpp  test_3.vcxproj  test_5.cpp  test_6.vcxproj  test_7.cpp
test/: CMakeLists.txt  Jamfile.v2  gcc_ns_error_workaround.hpp  include_test.hpp  include_test_post.hpp  order_pizza.cpp  order_pizza_link.cpp  test_adl.cpp  test_basics.cpp  test_basics_link.cpp  test_bitfield.cpp  test_constexpr.cpp  test_container_algorithm.cpp  test_disable_complement.cpp  test_disable_complement_link.cpp  test_fail.cpp  test_incompat.cpp  test_linking.cpp  test_logical_and.cpp  test_macros.cpp  test_pre_increment.cpp  test_rel_ops - Copy.cpp  test_rel_ops.cpp  test_rel_ops_link.cpp  test_test.cpp  test_unary_plus.cpp  test_unary_pp.cpp  test_utilities.cpp  test_utilities_link.cpp
